--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,8 +2,9 @@ pipeline {
     agent none
     stages {
         stage('Build') {
-            steps {
-                sh 'mvn -B -DskipTests clean package'
+            git url: 'https://github.com/cyrille-leclerc/multi-module-maven-project'
+            withMaven {
+                sh 'mvn clean verify'
             }
         }
     }
